2002-08-01	Joel Sherrill <joel@OARcorp.com>

	* include/coverhd.h: Per PR261 removed include of
	<rtems/score/targopts.h> because the file is no longer being 
	generated and really wasn't being used anyway.

2002-07-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/Makefile.am: Add bsplib_DATA = linkcmds.

2002-07-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate TMPINSTALL_FILES.
	Remove $(OBJS) from all-local.

2002-06-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove preinstallation of libbsp.a,

2001-05-09	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: In support of gcc 3.1, added one of more
	of the sections .jcr, .rodata*, .data.*, .gnu.linkonce.s2.*,
	.gnu.linkonce.sb2.*, and .gnu.linkonce.s.*.  Spacing corrections
	and direction of segments to memory regions may also have been
	addressed.  This was a sweep across all BSPs.
 
2002-04-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* irq/irq.c: Reflect changes to <rtems/score/cpu.h>. 
	Fix loopCounter.
	* irq/irq_asm.S:  Reflect changes to <rtems/score/cpu.h>.
	* vectors/vectors.S: Ditto.
	* vectors/vectors_init.c: Include <rtems/bspIo.h>.

2002-04-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/bspstart.c: Include <libcpu/cpuIdent.h>, <rtems/bspIo.h>.

2002-04-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add BSPOPTS_*(DISPATCH_HANDLER_STAT).
	  Remove RTEMS_ENABLE_LIBCDIR.

2001-04-08	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Per PR170, PR171, and PR172 add .eh_frame 
 
2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* console/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* irq/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* network/Makefile.am: Remove AUTOMAKE_OPTIONS.